refactor: rename view functions
